# test

./: .gitignore  CMakeLists.txt  README.md
3dmesh/: gun.mtl  imgui.ini
include/: glfw3native.h  head.h  obj.h  pbrRender.h  shaderh.h  skybox.h  tangent.h  texture.h
include/glad/: glad.h
lib/: zlibstaticd.lib
shaders/: background.frag  background.vert  bloom.frag  brdf.frag  brdf.vert  cube.frag  cube.vert  irradiance.frag  lightcube.frag  lightcube.vert  ltest.frag  ltest.vert  normal.frag  normal.vert  plane.frag  plane.vert  prefilter.frag  quad.frag  simpletest.frag  skybox.vert  splight.frag  splight.vert  splighto.vert  test.geo  tocubemap.frag  tocubemap.vert
src/: glad.c  imgui_impl_glfw.cpp  main.cpp  obj.cpp  pbrRender.cpp  shaderh.cpp  skybox.cpp  tangent.cpp  texture.cpp
textures/: Cerberus_A.tga  Cerberus_AO.tga  Cerberus_M.tga  Cerberus_N.tga  Cerberus_R.tga  imgui.ini
