cmake_minimum_required(VERSION 3.1)
project(newt)
# set(SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
message(${SRC})
set(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/src/glad.c ${CMAKE_CURRENT_SOURCE_DIR}/src/stb.c)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)  
link_libraries(glfw3 assimp)   
add_executable(test ${SRC})     
target_link_libraries(test glfw3 assimp)     
# link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)         
# add_library(calc SHARED ${SRC})

